wrap bug fixed

--- a/src/components/article-item-page/article-item-page.scss
+++ b/src/components/article-item-page/article-item-page.scss
@@ -43,8 +43,9 @@
   color: rgba(0, 0, 0, 0.5);
   font-size: 12px;
   line-height: 22px;
-  // display: flex;
-  // justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
+  flex-flow: column;
   overflow-wrap: break-word;
   margin-bottom: 25px;
 }
@@ -78,4 +79,7 @@
   text-align: center;
   vertical-align: top;
   font-size: 13px;
+}
+.user-article {
+  flex-flow: initial;
 }
